lustre/osd-ldiskfs/osd_handler.c
@@ -94,6 +94,9 @@ int ldiskfs_track_declares_assert;
 module_param(ldiskfs_track_declares_assert, int, 0644);
 MODULE_PARM_DESC(ldiskfs_track_declares_assert, "LBUG during tracking of declares");
 
+/* 1 GiB in 512-byte sectors */
+int ldiskfs_delayed_unlink_blocks = (1 << (30 - 9));
+
 /* Slab to allocate dynlocks */
 struct kmem_cache *dynlock_cachep;
 
@@ -2266,6 +2269,37 @@ static int osd_trans_cb_add(struct thandle *th, struct dt_txn_commit_cb *dcb)
 	return 0;
 }
 
+struct osd_delayed_iput_work {
+	struct work_struct diw_work;
+	struct inode	  *diw_inode;
+};
+
+static void osd_delayed_iput_fn(struct work_struct *work)
+{
+	struct osd_delayed_iput_work *diwork;
+	struct inode *inode;
+
+	diwork = container_of(work, struct osd_delayed_iput_work, diw_work);
+	inode = diwork->diw_inode;
+	CDEBUG(D_INODE, "%s: delayed iput (ino=%lu)\n",
+	       inode->i_sb->s_id, inode->i_ino);
+	iput(inode);
+	OBD_FREE_PTR(diwork);
+}
+
+noinline void osd_delayed_iput(struct inode *inode,
+			       struct osd_delayed_iput_work *diwork)
+{
+	if (!diwork) {
+		iput(inode);
+	} else {
+		INIT_WORK(&diwork->diw_work, osd_delayed_iput_fn);
+		diwork->diw_inode = inode;
+		queue_work(LDISKFS_SB(inode->i_sb)->s_misc_wq,
+			   &diwork->diw_work);
+	}
+}
+
 /*
  * Called just before object is freed. Releases all resources except for
  * object itself (that is released by osd_object_free()).
@@ -2278,6 +2312,7 @@ static void osd_object_delete(const struct lu_env *env, struct lu_object *l)
 	struct osd_object *obj = osd_obj(l);
 	struct qsd_instance *qsd = osd_def_qsd(osd_obj2dev(obj));
 	struct inode *inode = obj->oo_inode;
+	struct osd_delayed_iput_work *diwork = NULL;
 	__u64 projid;
 	qid_t uid;
 	qid_t gid;
@@ -2293,6 +2328,9 @@ static void osd_object_delete(const struct lu_env *env, struct lu_object *l)
 	if (!inode)
 		return;
 
+	if (inode->i_blocks > ldiskfs_delayed_unlink_blocks)
+		OBD_ALLOC(diwork, sizeof(*diwork));
+
 	if (osd_has_index(obj) &&  obj->oo_dt.do_index_ops == &osd_index_iam_ops)
 		ldiskfs_set_inode_flag(inode, LDISKFS_INODE_JOURNAL_DATA);
 
@@ -2301,7 +2339,7 @@ static void osd_object_delete(const struct lu_env *env, struct lu_object *l)
 	projid = i_projid_read(inode);
 
 	obj->oo_inode = NULL;
-	iput(inode);
+	osd_delayed_iput(inode, diwork);
 
 	/* do not rebalance quota if the caller needs to release memory
 	 * otherwise qsd_refresh_usage() may went into a new ldiskfs
@@ -8901,6 +8939,31 @@ static const struct obd_ops osd_obd_device_ops = {
 	.o_health_check = osd_health_check,
 };
 
+static ssize_t delayed_unlink_mb_show(struct kobject *kobj,
+				      struct attribute *attr, char *buf)
+{
+	return snprintf(buf, PAGE_SIZE, "%d\n",
+			ldiskfs_delayed_unlink_blocks >> 11);
+}
+
+static ssize_t delayed_unlink_mb_store(struct kobject *kobj,
+				       struct attribute *attr,
+				       const char *buffer, size_t count)
+{
+	u64 delayed_unlink_bytes;
+	int rc;
+
+	rc = sysfs_memparse(buffer, count, &delayed_unlink_bytes, "MiB");
+	if (rc)
+		return rc;
+
+	ldiskfs_delayed_unlink_blocks = delayed_unlink_bytes >> 9;
+
+	return count;
+}
+LUSTRE_RW_ATTR(delayed_unlink_mb);
+
+
 static ssize_t track_declares_assert_show(struct kobject *kobj,
 				   struct attribute *attr,
 				   char *buf)
@@ -8954,11 +9017,21 @@ static int __init osd_init(void)
 	if (kobj) {
 		rc = sysfs_create_file(kobj,
 				       &lustre_attr_track_declares_assert.attr);
-		kobject_put(kobj);
 		if (rc) {
-			CWARN("osd-ldiskfs: track_declares_assert failed to register with sysfs\n");
+			CWARN("%s: track_declares_assert sysfs registration failed: rc = %d\n",
+			      "osd-ldiskfs", rc);
 			rc = 0;
 		}
+
+		rc = sysfs_create_file(kobj,
+				       &lustre_attr_delayed_unlink_mb.attr);
+		if (rc) {
+			CWARN("%s: delayed_unlink_mb registration failed: rc = %d\n",
+			      "osd-ldiskfs", rc);
+			rc = 0;
+		}
+
+		kobject_put(kobj);
 	}
 
 #ifndef HAVE_FLUSH_DELAYED_FPUT
